fixed products text overflowing

--- a/css/style.css
+++ b/css/style.css
@@ -641,7 +641,7 @@ p.red_btn a {
     color: #006699;
     float: right;
     font-family: 'Conv_GE_SS_Two_Light';
-    font-size: 22px;
+    font-size: 17px;
     font-weight: normal;
     width: 250px;
 }
